--- a/packages/just-vm/package.json
+++ b/packages/just-vm/package.json
@@ -32,11 +32,11 @@
     "react": "^18.3.1"
   },
   "devDependencies": {
-    "tsup": "^8.2.4",
-    "react": "^18.3.1",
     "@types/node": "^20.14.14",
     "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "react": "^18.3.1",
+    "tsup": "^8.2.4"
   },
   "tsup": {
     "entry": [
